--- a/style.scss
+++ b/style.scss
@@ -304,7 +304,7 @@ display: flex;
   display: flex;
   background-attachment: fixed;
   background-repeat: no-repeat;
-  background-image: url(/images/Untitled\ design\ \(4\).gif);
+  background-image: url(/images/Studio_Project.gif);
   background-size: 100%
 }
 .container img{
